# Rusk

./: Cargo.toml  Makefile  README.md  config.toml
.github/workflows/: greetings.yml  rust.yml
commons/: Cargo.toml
commons/src/: lib.rs
content_repository/: Cargo.toml  Dockerfile  k8s_deploy.yaml
content_repository/src/: content_repository_manager.rs  main.rs  models.rs
k8s/: common.yaml  content_repository.yaml  kind-local-registry.sh  main.yaml  rusk_client.yaml  rusk_content_repo.yaml  rusk_main.yaml  rusk_web.yaml
main/: Cargo.toml  Dockerfile
main/src/: main.rs  old_main.rs
main/src/processors/: add_one_processor.rs  base_processor.rs  in_memory_processor.rs  in_memory_source_processor.rs  mod.rs  models.rs  random_number_generator.rs  uppercase_processor.rs
rusk_main/: Cargo.toml  Dockerfile
rusk_main/src/: handlers.rs  main.rs  models.rs
rusk_main/src/handlers/: cluster_request_handlers.rs  mod.rs  models.rs  processor_request_handlers.rs
rusk_main/src/processors/: base_processor.rs  in_memory_processor.rs  in_memory_source_processor.rs  mod.rs  models.rs
rusk_web/: Cargo.toml  Dockerfile
rusk_web/src/: main.rs
