[package]
name = "content_repository"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
uuid = {version = "1.8.0", features = ["v4"]}
toml = "0.8.14"
serde = { version = "1.0.204", features = ["derive"] }
bytes = "1.6.1"

[dev-dependencies]
tempfile = "3.10.1"
tokio-test = "0.4.4"
