[package]
name = "rusk_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = "0.7.11"
uuid = {version = "1.8.0", features = ["v4"]}
rand = "0.8.5"
async-trait = "0.1.81"
bytes = "1.6.1"
axum = {version = "0.7.5", features = ["json", "macros"]}
tower-http = {version = "0.5.2", features = ["cors"]}
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.68"

[dev-dependencies]
axum-test = "15.2.0"
axum-macros = "0.4.1"
