[package]
name = "rusk_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
commons = { path = "../commons" }
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.38.0", features = ["full"] }
tower-http = {version = "0.5.2", features = ["cors"]}
http = "1.1.0"

[dev-dependencies]
axum-test = "15.2.0"
